<resources>
    <string name="app_name">NUMAD25Sp_SichunTeng</string>
    <string name="about_me">About Me</string>
    <string name="quic_calc">Quic Calc</string>
    <string name="calc">CALC</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="delete">x</string>
    <string name="equal">=</string>
    <string name="email">Email: teng.sic@northeastern.edu</string>
    <string name="name">Name: Sichun Teng</string>
    <string name="contacts_collector">Contacts Collector</string>
    <string name="list_of_contacts">List of Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="save">Save</string>
    <string name="contact_name">Contact Name</string>
    <string name="_000_000_0000">000-000-0000</string>
</resources>