<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AECDCD"
    android:padding="20dp">

    <TextView
        android:id="@+id/calc_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/calc"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009999"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/btn_4"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/btn_4"
        app:layout_constraintTop_toBottomOf="@+id/calc_text" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009999"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/btn_5"
        app:layout_constraintEnd_toStartOf="@id/btn_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btn_1"
        app:layout_constraintTop_toBottomOf="@+id/calc_text" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009999"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/btn_6"
        app:layout_constraintEnd_toEndOf="@+id/btn_6"
        app:layout_constraintTop_toBottomOf="@+id/calc_text" />


    <Button
        android:id="@+id/btn_4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009999"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/btn_7"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/btn_7"
        app:layout_constraintTop_toBottomOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009999"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/btn_8"
        app:layout_constraintEnd_toStartOf="@id/btn_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btn_4"
        app:layout_constraintTop_toBottomOf="@+id/btn_2" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009999"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@+id/btn_9"
        app:layout_constraintEnd_toEndOf="@+id/btn_9"
        app:layout_constraintTop_toBottomOf="@+id/btn_3" />


    <Button
        android:id="@+id/btn_7"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009999"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/btn_plus"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/btn_plus"
        app:layout_constraintTop_toBottomOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009999"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/btn_0"
        app:layout_constraintEnd_toStartOf="@id/btn_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btn_7"
        app:layout_constraintTop_toBottomOf="@+id/btn_5" />

    <Button
        android:id="@+id/btn_9"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009999"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@+id/btn_minus"
        app:layout_constraintEnd_toEndOf="@+id/btn_minus"
        app:layout_constraintTop_toBottomOf="@+id/btn_6" />


    <Button
        android:id="@+id/btn_plus"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009A6C"
        android:text="@string/plus"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_delete"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/btn_delete"
        app:layout_constraintTop_toBottomOf="@+id/btn_7" />

    <Button
        android:id="@+id/btn_0"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009999"
        android:text="@string/_0"
        app:layout_constraintBottom_toTopOf="@+id/btn_delete"
        app:layout_constraintEnd_toStartOf="@id/btn_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btn_plus"
        app:layout_constraintTop_toBottomOf="@+id/btn_8" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009A6C"
        android:text="@string/minus"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_equals"
        app:layout_constraintEnd_toEndOf="@+id/btn_equals"
        app:layout_constraintTop_toBottomOf="@+id/btn_9" />


    <Button
        android:id="@+id/btn_delete"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009A6C"
        android:text="@string/delete"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_equals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_plus" />

    <Button
        android:id="@+id/btn_equals"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009A6C"
        android:text="@string/equal"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btn_delete"
        app:layout_constraintTop_toBottomOf="@+id/btn_minus" />

</androidx.constraintlayout.widget.ConstraintLayout>




